# Notemae

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.proxy.yml  docker-compose.yml  list-feedback.md
agent/: README.md  pyproject.toml
agent/app/: __init__.py  config.py  main.py  models.py  profile.py  prompts.py  reranker.py  scoring.py  taxonomy.py  usage.py
agent/evaluation/: holdout_annotations.py  results-holdout.json  results-multirun-dev.json  results.json  run_eval.py
agent/evaluation/annotations/: holdout-disagreements.csv
agent/evaluation/fixtures/: catalog.json  personas-holdout-metadata.json  personas-holdout-unlabeled.json  personas-holdout.json  personas.json
agent/fine_tuning/: BENCHMARK.md  README.md  evaluate_profile_model.py  generate_dataset.py  validate_dataset.py
agent/fine_tuning/data/: train.jsonl  validation.jsonl
agent/tests/: test_config.py  test_evaluation.py  test_holdout_annotations.py  test_note_profile.py  test_usage.py
backend/: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  go.mod  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py
backend/cmd/api/: main.go
backend/internal/config/: config.go
scraping/: Dockerfile  README.md  pyproject.toml
scraping/app/: __init__.py  config.py  enrichment.py  main.py  models.py  normalization.py  runner.py  state.py
scraping/app/sources/: __init__.py  open_beauty_facts.py  wikidata.py  youtube.py
scraping/sources/: README.md  curated-catalog-v1.json  public-dataset.example.json
scraping/tests/: test_normalization.py
(+117 files in other folders)
