[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "scentsphere-backend"
version = "0.1.0"
description = "Catalog and public API for ScentSphere AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "uvicorn[standard]>=0.32,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]
