[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "scentsphere-ingestion"
version = "0.1.0"
description = "Approved-source ingestion and normalization service for ScentSphere"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.6,<3",
  "uvicorn[standard]>=0.32,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]
